test/expected/include-too_many_files.out
cdecl> include "*"
               ^
3,9: error: *: too many files
